# asteroid-btsyncd

./: CMakeLists.txt  WIP.patch  advertisement.cpp  advertisement.h  agent.cpp  agent.h  ancs.cpp  ancs.h  ancs_notification.cpp  ancs_notification.h  application.cpp  asteroid-btsyncd  asteroid-btsyncd.pro  batteryservice.cpp  batteryservice.h  bluezmanager.cpp  bluezmanager.h  calendarservice.cpp  calendarservice.h  characteristic.cpp  characteristic.h  common.h  descriptor.cpp  descriptor.h  main.cpp  mediaservice.cpp  mediaservice.h  notificationservice.cpp  notificationservice.h  screenshotservice.cpp  screenshotservice.h  service.cpp  service.h  timeservice.h  weatherservice.cpp  weatherservice.h
i18n/: asteroid-btsyncd.ar_AR.ts  asteroid-btsyncd.ast.ts  asteroid-btsyncd.az.ts  asteroid-btsyncd.be.ts  asteroid-btsyncd.bqi.ts  asteroid-btsyncd.ca.ts  asteroid-btsyncd.cs.ts  asteroid-btsyncd.da.ts  asteroid-btsyncd.de.ts  asteroid-btsyncd.el.ts  asteroid-btsyncd.en_GB.ts  asteroid-btsyncd.eo.ts  asteroid-btsyncd.es.ts  asteroid-btsyncd.es_AR.ts  asteroid-btsyncd.fa.ts  asteroid-btsyncd.fi.ts  asteroid-btsyncd.fil.ts  asteroid-btsyncd.fr.ts  asteroid-btsyncd.gl.ts  asteroid-btsyncd.he.ts  asteroid-btsyncd.hi.ts  asteroid-btsyncd.hr.ts  asteroid-btsyncd.hu.ts  asteroid-btsyncd.ia.ts  asteroid-btsyncd.id.ts  asteroid-btsyncd.isv.ts  asteroid-btsyncd.it.ts  asteroid-btsyncd.ja.ts  asteroid-btsyncd.ka.ts  asteroid-btsyncd.kab.ts  asteroid-btsyncd.ko.ts  asteroid-btsyncd.lb.ts  asteroid-btsyncd.lt.ts  asteroid-btsyncd.mr.ts  asteroid-btsyncd.ms.ts  asteroid-btsyncd.nb.ts  asteroid-btsyncd.nb_NO.ts  asteroid-btsyncd.nl.ts  asteroid-btsyncd.nl_BE.ts  asteroid-btsyncd.oc.ts  (+21 more)
src/: CMakeLists.txt  advertisement.cpp  advertisementservice.cpp  advertisementservice.h  ancs.cpp  ancs.h  ancs_notification.cpp  ancs_protocol_constants.h  application.cpp  application.h  batteryservice.cpp  batteryservice.h  batterystatus.cpp  batterystatus.h  bluezmanager.cpp  bluezmanager.h  characteristic.cpp  characteristic.h  common.h  cts.cpp  cts.h  deviceinfoservice.cpp  deviceinfoservice.h  main.cpp  mediaservice.cpp  mediaservice.h  notificationservice.cpp  notificationservice.h  org.asteroidos.weather.gschema.xml  screenshotservice.cpp  screenshotservice.h  service.cpp  service.h  settime.cpp  settime.h  timeservice.cpp  timeservice.h  weatherservice.cpp  weatherservice.h
